--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="he" dir="rtl">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=1280, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Split Slideshow</title>
   <link href="https://fonts.googleapis.com/css2?family=David+Libre:wght@700&display=swap" rel="stylesheet">
   <style>
@@ -10,8 +10,8 @@
       margin: 0;
       padding: 0;
       background-color: black;
-      width: 1280px;
-      height: 720px;
+      width: 100%;
+      height: 100%;
       overflow: hidden;
       font-family: 'David Libre', sans-serif;
       direction: rtl;
