--- a/index.html
+++ b/index.html
@@ -42,11 +42,14 @@
       box-sizing: border-box;
       color: white;
       text-align: right;
+      font-size: 2.4rem; /* increased font size */
+      line-height: 1.6;
     }
     iframe {
       width: 100%;
-      height: 200px;
+      aspect-ratio: 16 / 9;
       margin-bottom: 20px;
+      border: none;
     }
     audio {
       width: 100%;
@@ -94,11 +97,11 @@
 <body>
   <div class="container">
     <div class="left">
-      <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allowfullscreen></iframe>
-      <iframe src="https://www.youtube.com/embed/tgbNymZ7vqY" frameborder="0" allowfullscreen></iframe>
-      <iframe src="https://www.youtube.com/embed/3JZ_D3ELwOQ" frameborder="0" allowfullscreen></iframe>
-      <iframe src="https://www.youtube.com/embed/kJQP7kiw5Fk" frameborder="0" allowfullscreen></iframe>
-      <iframe src="https://www.youtube.com/embed/l482T0yNkeo" frameborder="0" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/tgbNymZ7vqY" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/3JZ_D3ELwOQ" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/kJQP7kiw5Fk" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/l482T0yNkeo" allowfullscreen></iframe>
       <audio controls>
         <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mpeg">
       </audio>
@@ -108,12 +111,11 @@
     </div>
     <div class="divider"></div>
     <div class="right">
-      <div class="image-block"><img src="https://via.placeholder.com/600x200" alt="Placeholder"></div>
-      <div class="text-block">טקסט לדוגמה – תיאור קצר או מחשבה על התמונה.</div>
-      <div class="image-block"><img src="https://via.placeholder.com/600x200" alt="Placeholder"></div>
-      <div class="text-block">עוד טקסט לדוגמה. אולי משהו פיוטי או ציטוט.</div>
-      <div class="image-block"><img src="https://via.placeholder.com/600x200" alt="Placeholder"></div>
-      <div class="text-block">אפשר גם לשלב שיר קצר, שורה אחת או שתיים.</div>
+      <div class="text-block">
+        העימות החזיתי בין הרווארד לממשל טראמפ יוצר חוסר ודאות עמוק לגבי עתיד המוסד וכבר מוביל לקיצוצים ופיטורים ברחבי הקמפוס. אך למרות זאת, ההחלטה של הנהלת האוניברסיטה שלא להיענות לדרישות מרחיקות הלכת של הממשל שינתה באחת את אווירת הנכאים ששררה במהלך השבועות הארוכים של העימות. בתקופה שקדמה להחלטה, היה נדמה כי הרווארד עומדת ללכת בדרכה של אוניברסיטת קולומביה ולהיכנע לדרישות הממשל כדי לא לאבד מיליארדי דולרים של מימון פדרלי למחקר.
+        <br><br>
+        בניגוד לתדמית הרדיקלית שיש לאוניברסיטה בישראל מאז מתקפת 7 באוקטובר, הרווארד ידועה בארה"ב כמוסד שמרני בבסיסו שמעניק חינוך לדורות של אילי הון, עורכי דין, ואנשי ציבור מהזרם המרכזי, וקשור בטבורו למוקדי הכוח הכלכליים והפוליטיים החזקים ביותר. בשנה האקדמית הנוכחית הנהלת האוניברסיטה עשתה מאמץ מרוכז להשתיק את המחאה השנויה במחלוקת נגד מדיניות ישראל בעזה על ידי איסור גורף של הפגנות בתוך הקמפוס, כולל איסור על כתיבה בגיר על מדרכות.
+      </div>
       <div class="image-block"><img src="https://via.placeholder.com/600x200" alt="Placeholder"></div>
       <div class="text-block">"האור נוגע בקצה – כמו זיכרון שלא התרחש"</div>
     </div>
