--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
 <body>
   <div class="container">
     <div class="left">
-      <iframe src="https://youtu.be/XdRNho9OVzs?si=AEbuTHhZiLVqgiXL" allowfullscreen></iframe>
-<div class="text-caption">October 9, 1952; Horace Silver – piano; Gene Ramey – bass; Art Blakey – drums</div>
+      <iframe src="https://www.youtube.com/embed/XdRNho9OVzs?si=jTwKTE79NEoDvNgB" allowfullscreen></iframe>
+<div class="text-caption">October 9, 1952<br>Horace Silver – piano<br>Gene Ramey – bass<br>Art Blakey – drums</div>
       <iframe src="https://www.youtube.com/embed/tgbNymZ7vqY" allowfullscreen></iframe>
       <iframe src="https://www.youtube.com/embed/3JZ_D3ELwOQ" allowfullscreen></iframe>
       <iframe src="https://www.youtube.com/embed/kJQP7kiw5Fk" allowfullscreen></iframe>
