--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       width: 100%;
       height: 100%;
       overflow: hidden;
-      font-family: 'David Libre', sans-serif;
+      font-family: 'David Libre', serif;
       direction: rtl;
     }
     .container {
