--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
       height: 100%;
       overflow: hidden;
       font-family: 'David Libre', serif;
-      direction: rtl;
     }
     .container {
       display: flex;
@@ -84,12 +83,18 @@
       width: 100%;
       height: auto;
     }
-    .text-block,
+    .text-block {
+     margin-bottom: 40px;
+      color: white;
+      font-size: 2.4rem;
+      line-height: 1.3;
+      direction: rtl;
+ }
     .text-caption {
       margin-bottom: 40px;
       color: white;
-      font-size: 2.4rem;
-      line-height: 1.6;
+      font-size: 1.8rem;
+      line-height: 1;
     }
     .overlay {
       position: fixed;
@@ -115,7 +120,7 @@
   <div class="container">
     <div class="left">
       <iframe src="https://www.youtube.com/embed/XdRNho9OVzs?si=jTwKTE79NEoDvNgB" allowfullscreen></iframe>
-<div class="text-caption">October 9, 1952<br>Horace Silver – piano<br>Gene Ramey – bass<br>Art Blakey – drums</div>
+<div class="text-caption">October 9, 1952; Horace Silver – piano; Gene Ramey – bass; Art Blakey – drums</div>
       <iframe src="https://www.youtube.com/embed/tgbNymZ7vqY" allowfullscreen></iframe>
       <iframe src="https://www.youtube.com/embed/3JZ_D3ELwOQ" allowfullscreen></iframe>
       <iframe src="https://www.youtube.com/embed/kJQP7kiw5Fk" allowfullscreen></iframe>
@@ -149,7 +154,7 @@
       <div class="image-block">
         <img src="7.jpg" alt="7">
       </div>
-      <div class="text-caption">הוראס סילבר וארט בלייקי, שנות החמישים</div>
+      <div class="text-block">הוראס סילבר וארט בלייקי, שנות החמישים</div>
     </div>
   </div>
 
