--- a/index.html
+++ b/index.html
@@ -83,19 +83,20 @@
       width: 100%;
       height: auto;
     }
-    .text-block {
-     margin-bottom: 40px;
-      color: white;
-      font-size: 2.4rem;
-      line-height: 1.3;
-      direction: rtl;
- }
     .text-caption {
-      margin-bottom: 40px;
+      margin-bottom: 25px;
       color: white;
       font-size: 1.8rem;
       line-height: 1;
+      direction: ltr;
     }
+    .text-block {
+     margin-bottom: 30px;
+      color: white;
+      font-size: 2.4rem;
+      line-height: 1.2;
+      direction: rtl;
+ }
     .overlay {
       position: fixed;
       top: 0;
