--- a/index.html
+++ b/index.html
@@ -84,17 +84,17 @@
       height: auto;
     }
     .text-caption {
-      margin-bottom: 25px;
+      margin-bottom: 20px;
       color: white;
-      font-size: 1.8rem;
-      line-height: 1;
+      font-size: 1.7rem;
+      line-height: 1.1;
       direction: ltr;
     }
     .text-block {
-     margin-bottom: 30px;
+     margin-bottom: 35px;
       color: white;
-      font-size: 2.4rem;
-      line-height: 1.2;
+      font-size: 2.5rem;
+      line-height: 1.4;
       direction: rtl;
  }
     .overlay {
@@ -121,7 +121,7 @@
   <div class="container">
     <div class="left">
       <iframe src="https://www.youtube.com/embed/XdRNho9OVzs?si=jTwKTE79NEoDvNgB" allowfullscreen></iframe>
-<div class="text-caption">October 9, 1952; Horace Silver – piano; Gene Ramey – bass; Art Blakey – drums</div>
+<div class="text-caption">Safari (Horace Silver)<br>Horace Silver Trio & Art Blakey–Sabu<br>October 9, 1952<br>Horace Silver – piano<br>Gene Ramey – bass<br>Art Blakey – drums</div>
       <iframe src="https://www.youtube.com/embed/tgbNymZ7vqY" allowfullscreen></iframe>
       <iframe src="https://www.youtube.com/embed/3JZ_D3ELwOQ" allowfullscreen></iframe>
       <iframe src="https://www.youtube.com/embed/kJQP7kiw5Fk" allowfullscreen></iframe>
