--- a/index.html
+++ b/index.html
@@ -121,8 +121,25 @@
   <div class="container">
     <div class="left">
       <iframe src="https://www.youtube.com/embed/XdRNho9OVzs?si=jTwKTE79NEoDvNgB" allowfullscreen></iframe>
-<div class="text-caption"><i>Safari (Horace Silver)<br>Horace Silver Trio & Art Blakey–Sabu</i>i><br><br>Horace Silver – piano<br>Gene Ramey – bass<br>Art Blakey – drums<br><br><i>Recorded October 9, 1952</i></div>
-      <iframe src="https://www.youtube.com/embed/tgbNymZ7vqY" allowfullscreen></iframe>
+<div class="text-caption">
+  Safari (Horace Silver)<br>Horace Silver Trio & Art Blakey–Sabu<br>
+  <br>
+  Horace Silver – piano<br>
+  Gene Ramey – bass<br>
+  Art Blakey – drums<br>
+  <br>
+  Recorded October 9, 1952
+</div>
+      <iframe src="https://www.youtube.com/embed/Wn3VIgRJT2w?si=__zyrZozrtycpe24" allowfullscreen></iframe>
+<div class="text-caption">
+  Ecaroh (Horace Silver)<br>Horace Silver Trio & Art Blakey–Sabu<br>
+  <br>
+  Horace Silver – piano<br>
+  Curley Russell – bass<br>
+  Art Blakey – drums<br>
+  <br>
+  Recorded October 20, 1952
+</div>
       <iframe src="https://www.youtube.com/embed/3JZ_D3ELwOQ" allowfullscreen></iframe>
       <iframe src="https://www.youtube.com/embed/kJQP7kiw5Fk" allowfullscreen></iframe>
       <iframe src="https://www.youtube.com/embed/l482T0yNkeo" allowfullscreen></iframe>
