--- a/index.html
+++ b/index.html
@@ -140,7 +140,18 @@
   <br>
   Recorded October 20, 1952
 </div>
-      <iframe src="https://www.youtube.com/embed/3JZ_D3ELwOQ" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/tXwyQ_8sosw?si=UuzODXgZALvzfygN" allowfullscreen></iframe>
+<div class="text-caption">
+  Split Kick (Horace Silver)<br>Art Blakey Quintet — A Night at Birdland, Vols. 1 & 2<br>
+  <br>
+Clifford Brown – trumpet<br>
+Lou Donaldson – alto saxophone<br>
+Horace Silver – piano<br>
+Curley Russell – bass<br>
+Art Blakey – drums<br>
+  <br>
+  Recorded October 20, 1952
+</div>
       <iframe src="https://www.youtube.com/embed/kJQP7kiw5Fk" allowfullscreen></iframe>
       <iframe src="https://www.youtube.com/embed/l482T0yNkeo" allowfullscreen></iframe>
       <audio controls>
