--- a/index.html
+++ b/index.html
@@ -130,6 +130,9 @@
   <br>
   Recorded October 9, 1952
 </div>
+
+    <hr width="100%" color="white"/>
+
       <iframe src="https://www.youtube.com/embed/Wn3VIgRJT2w?si=__zyrZozrtycpe24" allowfullscreen></iframe>
 <div class="text-caption">
   Ecaroh (Horace Silver)<br>Horace Silver Trio & Art Blakey–Sabu<br>
@@ -140,6 +143,9 @@
   <br>
   Recorded October 20, 1952
 </div>
+
+<hr width="100%" color="white"/>
+
       <iframe src="https://www.youtube.com/embed/tXwyQ_8sosw?si=UuzODXgZALvzfygN" allowfullscreen></iframe>
 <div class="text-caption">
   Split Kick (Horace Silver)<br>Art Blakey Quintet — A Night at Birdland, Vols. 1 & 2<br>
@@ -152,15 +158,35 @@ Art Blakey – drums<br>
   <br>
   Recorded October 20, 1952
 </div>
-      <iframe src="https://www.youtube.com/embed/kJQP7kiw5Fk" allowfullscreen></iframe>
-      <iframe src="https://www.youtube.com/embed/l482T0yNkeo" allowfullscreen></iframe>
+
+<hr width="100%" color="white"/>
+
+
       <audio controls>
-        <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mpeg">
-      </audio>
-      <audio controls>
-        <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-2.mp3" type="audio/mpeg">
+        <source src="05. split kick.mp3" type="audio/mpeg">
       </audio>
     </div>
+
+
+  <iframe src="https://www.youtube.com/embed/Wn3VIgRJT2w?si=__zyrZozrtycpe24" allowfullscreen></iframe>
+<div class="text-caption">
+  Ecaroh (Horace Silver)<br>Horace Silver Trio & Art Blakey–Sabu<br>
+  <br>
+  Horace Silver – piano<br>
+  Curley Russell – bass<br>
+  Art Blakey – drums<br>
+  <br>
+  Recorded October 20, 1952
+</div>
+
+<hr width="100%" color="white"/>
+
+
+
+
+
+
+
     <div class="divider"></div>
     <div class="right">
       <div class="image-row">
