--- a/index.html
+++ b/index.html
@@ -155,7 +155,10 @@ Art Blakey – drums<br>
       <audio controls>
         <source src="05. split kick.mp3" type="audio/mpeg">
       </audio>
-  <iframe src="https://www.youtube.com/embed/Wn3VIgRJT2w?si=__zyrZozrtycpe24" allowfullscreen></iframe>
+    </div>
+    <div class="divider"></div>
+    <div class="right">
+<iframe src="https://www.youtube.com/embed/Wn3VIgRJT2w?si=__zyrZozrtycpe24" allowfullscreen></iframe>
 <div class="text-caption">
   Ecaroh (Horace Silver)<br>Horace Silver Trio & Art Blakey–Sabu<br>
   <br>
