--- a/index.html
+++ b/index.html
@@ -172,9 +172,9 @@ Art Blakey – drums<br>
         <div class="image-half"><img src="6.jpg" alt="6"></div>
       </div>
       <div class="text-block">
-        העימות החזיתי בין הרווארד לממשל טראמפ יוצר חוסר ודאות עמוק לגבי עתיד המוסד וכבר מוביל לקיצוצים ופיטורים ברחבי הקמפוס. אך למרות זאת, ההחלטה של הנהלת האוניברסיטה שלא להיענות לדרישות מרחיקות הלכת של הממשל שינתה באחת את אווירת הנכאים ששררה במהלך השבועות הארוכים של העימות. בתקופה שקדמה להחלטה, היה נדמה כי הרווארד עומדת ללכת בדרכה של אוניברסיטת קולומביה ולהיכנע לדרישות הממשל כדי לא לאבד מיליארדי דולרים של מימון פדרלי למחקר.
-        <br><br>
-        בניגוד לתדמית הרדיקלית שיש לאוניברסיטה בישראל מאז מתקפת 7 באוקטובר, הרווארד ידועה בארה"ב כמוסד שמרני בבסיסו שמעניק חינוך לדורות של אילי הון, עורכי דין, ואנשי ציבור מהזרם המרכזי, וקשור בטבורו למוקדי הכוח הכלכליים והפוליטיים החזקים ביותר. בשנה האקדמית הנוכחית הנהלת האוניברסיטה עשתה מאמץ מרוכז להשתיק את המחאה השנויה במחלוקת נגד מדיניות ישראל בעזה על ידי איסור גורף של הפגנות בתוך הקמפוס, כולל איסור על כתיבה בגיר על מדרכות.
+תקליטי 78 סיבובים לדקה (78 RPM) היו הפורמט המרכזי להקלטות מוזיקליות מסחריות מראשית המאה ה-20 ועד שנות ה-50. הם לא היו עשויים ויניל כמו תקליטי ה-LP המאוחרים יותר, אלא מחומר שנקרא שלק (Shellac) – תערובת שבירה יחסית שנשברת בקלות. כל תקליט כלל בדרך כלל שיר אחד בכל צד, בשל מגבלת הזמן – כשלוש עד חמש דקות לכל צד. השימוש בפורמט הזה היה נפוץ בערך מ-1900 ועד סוף שנות ה-40, כאשר תקליטי LP ו-45 התחילו להחליף אותו בזכות איכות סאונד גבוהה יותר ויכולת להכיל יותר מוזיקה.
+<br><br>
+המילה "אלבום" לתיאור אוסף שירים מגיעה דווקא מתקופת תקליטי ה-78. אז, כל שיר היה על תקליט נפרד, והיו מוכרים אותם בצרור – כמו אלבום תמונות – שבו כל "דף" היה מעטפה עם תקליט בודד. כך נולד הביטוי "אלבום מוזיקה": אוסף של תקליטים שכל אחד מהם כולל שיר אחד, שמסודרים יחד כמו ספר.
       </div>
       <div class="image-block">
         <img src="7.jpg" alt="7">
