--- a/index.html
+++ b/index.html
@@ -179,7 +179,21 @@ Art Blakey – drums<br>
       <div class="image-block">
         <img src="7.jpg" alt="7">
       </div>
-      <div class="text-block">הוראס סילבר וארט בלייקי, שנות החמישים</div>
+ <div class="text-block">הוראס סילבר וארט בלייקי, שנות החמישים</div>
+    <div class="image-row">
+        <div class="image-half"><img src="rudy1.jpg"></div>
+        <div class="image-half"><img src="rudy2.jpg"></div>
+      </div>
+      <div class="image-row">
+        <div class="image-half"><img src="rudy3.jpg"></div>
+        <div class="image-half"><img src="rudy4,jpg"></div>
+      </div>
+<div class="text-block">
+רודי ואן גלדר הקים את אולפן ההקלטות שלו בהאקנסאק, ניו ג'רזי, בשנת 1946, בתוך בית הוריו. הסלון שימש כחדר הקלטות עם תקרה גבוהה במיוחד, ובצמוד לו נבנה חדר בקרה מבודד עם חלון זכוכית כפולה. ואן גלדר השתמש בציוד הקלטה מתקדם לזמנו: מיקרופונים כמו ה-Neumann U47, שאיפשרו לכידת סאונד מפורטת עם יחס אות לרעש (signal-to-noise ratio) יוצא דופן לתקופה. האולפן הביתי היה מתוכנן בקפידה מבחינה אקוסטית, ואיפשר רמות דינמיקה מדויקות תוך מזעור רעשי רקע – דבר שלא היה מובן מאליו באולפני שנות ה-40 וה-50.
+<br><br>
+המעבר לתקליטי LP אפשר לואן גלדר להקליט בעוצמה גבוהה יותר מבלי לחשוש מעיוות (distortion), מה שהוביל לאיכות סאונד נקייה ומאוזנת. הוא הקפיד על מיקום מדויק של המיקרופונים, שמירה על מרחקים, ובקרה על spill בין כלים – במיוחד בחדר קטן יחסית כמו בהאקנסאק. האולפן אמנם היה בייתי, אך כל תהליך ההקלטה נוהל ברמת דיוק של מעבדה – כולל הקפדה על רמות מתח, כיול מכשירים, ונקודת מבט כמעט רפואית על ההקלטה עצמה (ואן גלדר היה אופטומטריסט בהכשרתו).
+     </div>
+     
     </div>
   </div>
 
