--- a/index.html
+++ b/index.html
@@ -155,6 +155,31 @@ Art Blakey – drums<br>
       <audio controls>
         <source src="05. split kick.mp3" type="audio/mpeg">
       </audio>
+      
+      <iframe src="https://www.youtube.com/embed/aOMX3Q0P400?si=jNoqlYESqVmI8t7g" allowfullscreen></iframe>
+<div class="text-caption">
+  The Preacher (Horace Silver)<br>Horace Silver And The Jazz Messengers<br>
+  <br>
+Horace Silver – piano<br>
+Kenny Dorham – trumpet<br>
+Hank Mobley – tenor saxophone<br>
+Doug Watkins – bass<br>
+Art Blakey – drums<br>
+  <br>
+  Recorded February 6, 1955
+</div>
+
+    <iframe src="https://www.youtube.com/embed/crA0Pl2A5v0?si=WWlYBKP8TZeWynq6" allowfullscreen></iframe>
+<div class="text-caption">
+A Night In Tunisia [Alternate Take] (Dizzy Gillespie)<br>The Amazing Bud Powell, Vols. 1 & 2<br>
+  <br>
+Bud Powell – piano<br>
+Curley Russell – bass<br>
+Max Roach – drums<br>
+  <br>
+  Recorded May 1, 1951
+</div>
+
     </div>
     <div class="divider"></div>
 <div class="divider"></div>
@@ -186,12 +211,12 @@ Art Blakey – drums<br>
       </div>
       <div class="image-row">
         <div class="image-half"><img src="rudy3.jpg"></div>
-        <div class="image-half"><img src="rudy4,jpg"></div>
+        <div class="image-half"><img src="rudy4.jpg"></div>
       </div>
 <div class="text-block">
 רודי ואן גלדר הקים את אולפן ההקלטות שלו בהאקנסאק, ניו ג'רזי, בשנת 1946, בתוך בית הוריו. הסלון שימש כחדר הקלטות עם תקרה גבוהה במיוחד, ובצמוד לו נבנה חדר בקרה מבודד עם חלון זכוכית כפולה. ואן גלדר השתמש בציוד הקלטה מתקדם לזמנו: מיקרופונים כמו ה-Neumann U47, שאיפשרו לכידת סאונד מפורטת עם יחס אות לרעש (signal-to-noise ratio) יוצא דופן לתקופה. האולפן הביתי היה מתוכנן בקפידה מבחינה אקוסטית, ואיפשר רמות דינמיקה מדויקות תוך מזעור רעשי רקע – דבר שלא היה מובן מאליו באולפני שנות ה-40 וה-50.
 <br><br>
-המעבר לתקליטי LP אפשר לואן גלדר להקליט בעוצמה גבוהה יותר מבלי לחשוש מעיוות (distortion), מה שהוביל לאיכות סאונד נקייה ומאוזנת. הוא הקפיד על מיקום מדויק של המיקרופונים, שמירה על מרחקים, ובקרה על spill בין כלים – במיוחד בחדר קטן יחסית כמו בהאקנסאק. האולפן אמנם היה בייתי, אך כל תהליך ההקלטה נוהל ברמת דיוק של מעבדה – כולל הקפדה על רמות מתח, כיול מכשירים, ונקודת מבט כמעט רפואית על ההקלטה עצמה (ואן גלדר היה אופטומטריסט בהכשרתו).
+המעבר לתקליטי LP אפשר לואן גלדר להקליט בעוצמה גבוהה יותר מבלי לחשוש מעיוות (distortion), מה שהוביל לאיכות סאונד נקייה ומאוזנת. הוא הקפיד על מיקום מדויק של המיקרופונים, שמירה על מרחקים, ובקרה על בליד בין כלים – במיוחד בחדר קטן יחסית כמו בהאקנסאק. האולפן אמנם היה בייתי, אך כל תהליך ההקלטה נוהל ברמת דיוק של מעבדה – כולל הקפדה על רמות מתח, כיול מכשירים, ונקודת מבט כמעט רפואית על ההקלטה עצמה (ואן גלדר היה אופטומטריסט בהכשרתו).
      </div>
      
     </div>
