--- a/index.html
+++ b/index.html
@@ -180,6 +180,45 @@ Max Roach – drums<br>
   Recorded May 1, 1951
 </div>
 
+    
+    <iframe src="https://www.youtube.com/embed/ANUZ3vF94pE?si=B-srEISoU3oyIg5Q" allowfullscreen></iframe>
+<div class="text-caption">
+Lady Sings the Blues (Herbie Nichols)<br>Herbie Nichols Trio<br>
+  <br>
+Herbie Nichols – piano<br>
+Al McKibbon – bass<br>
+Max Roach – drums<br>
+  <br>
+  Recorded August 1, 1955 (Hackensack, New Jersey)
+</div>
+
+    <iframe src="https://www.youtube.com/embed/ANUZ3vF94pE?si=B-srEISoU3oyIg5Q" allowfullscreen></iframe>
+<div class="text-caption">
+Lady Sings the Blues (Herbie Nichols)<br>Billie Holiday<br>
+  <br>
+Billie Holiday – vocals<br>
+Paul Quinichette – tenor saxophone<br>
+Charlie Shavers – trumpet<br>
+Tony Scott – clarinet<br>
+Wynton Kelly – piano<br>
+Kenny Burrell – guitar<br>
+Lenny McBrowne – drums<br>
+Aaron Bell – bass<br>
+  <br>
+  Recorded June 6 and 7, 1956 (Fine Sound Studios, NYC)
+</div>
+
+    <iframe src="https://www.youtube.com/embed/t8jFGFwOm7k?si=_ieIyryk7XnUZaTr" allowfullscreen></iframe>
+<div class="text-caption">
+Señor Blues (Horace Silver)<br>Live in Paris<br>February 14, 1959<br>
+  <br>
+Horace Silver - piano<br>
+Blue Mitchell - trumpet<br>
+Junior Cook - tenor saxophone<br>
+Gene Taylor - bass<br>
+Louis Hayes - drums<br>
+</div>
+
     </div>
     <div class="divider"></div>
 <div class="divider"></div>
@@ -218,7 +257,20 @@ Max Roach – drums<br>
 <br><br>
 המעבר לתקליטי LP אפשר לואן גלדר להקליט בעוצמה גבוהה יותר מבלי לחשוש מעיוות (distortion), מה שהוביל לאיכות סאונד נקייה ומאוזנת. הוא הקפיד על מיקום מדויק של המיקרופונים, שמירה על מרחקים, ובקרה על בליד בין כלים – במיוחד בחדר קטן יחסית כמו בהאקנסאק. האולפן אמנם היה בייתי, אך כל תהליך ההקלטה נוהל ברמת דיוק של מעבדה – כולל הקפדה על רמות מתח, כיול מכשירים, ונקודת מבט כמעט רפואית על ההקלטה עצמה (ואן גלדר היה אופטומטריסט בהכשרתו).
      </div>
-     
+    <div class="image-row">
+        <div class="image-half"><img src="bn1.jpg"></div>
+        <div class="image-half"><img src="bn2.jpg"></div>
+      </div>
+      <div class="image-row">
+        <div class="image-half"><img src="bn3.jpg"></div>
+        <div class="image-half"><img src="bn4.jpg"></div>
+      </div>     
+<div class="text-block">
+בבלו נוט, השינוי המשמעותי התרחש בסוף שנות ה-40 ותחילת שנות ה-50, עם המעבר מתקליטי 78 RPM לתקליטי LP (Long Play) במהירות 33⅓ RPM. המעבר הזה לא היה רק טכנולוגי, אלא גם אמנותי: במקום לחשוב על כל שיר כיחידה נפרדת, בלו נוט התחילה להתייחס לכל צד של תקליט כמרחב שלם שבו אפשר לבנות זרימה, דרמה והקשר בין קטעים.
+<br><br>
+המעבר ל-LP איפשר להקליט קטעים ארוכים יותר – עד 20 דקות בכל צד – מה שפתח את הדלת לג'אם סשנים מוקלטים, סולואים ארוכים, ולתכנון של אלבום כיצירה שלמה. אלפרד ליון, מייסד בלו נוט, היה ידוע בגישה שלו לתת לנגנים מרחב, זמן, וחזרות באולפן – בניגוד לסטנדרט של התעשייה דאז. כך התחילה התקופה שבה אלבום לא היה רק אוסף של שירים, אלא יצירה קוהרנטית – גם מבחינה מוזיקלית, גם סגנונית, וגם גרפית, בזכות העיצוב של ריד מיילס והצילום של פרנסיס וולף.
+    </div>  
+
     </div>
   </div>
 
