--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ Max Roach – drums<br>
   Recorded August 1, 1955 (Hackensack, New Jersey)
 </div>
 
-    <iframe src="https://www.youtube.com/embed/ANUZ3vF94pE?si=B-srEISoU3oyIg5Q" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/KCYCad_Y53U?si=nicb9COINLzq4013" allowfullscreen></iframe>
 <div class="text-caption">
 Lady Sings the Blues (Herbie Nichols)<br>Billie Holiday<br>
   <br>
@@ -265,6 +265,18 @@ Louis Hayes - drums<br>
         <div class="image-half"><img src="bn3.jpg"></div>
         <div class="image-half"><img src="bn4.jpg"></div>
       </div>     
+   <div class="image-row">
+        <div class="image-half"><img src="bn5.jpg"></div>
+        <div class="image-half"><img src="bn6.jpg"></div>
+      </div>
+   <div class="image-row">
+        <div class="image-half"><img src="bn7.jpg"></div>
+        <div class="image-half"><img src="bn8.jpg"></div>
+      </div>
+   <div class="image-row">
+        <div class="image-half"><img src="bn9.jpg"></div>
+        <div class="image-half"><img src="bn10.jpg"></div>
+      </div>
 <div class="text-block">
 בבלו נוט, השינוי המשמעותי התרחש בסוף שנות ה-40 ותחילת שנות ה-50, עם המעבר מתקליטי 78 RPM לתקליטי LP (Long Play) במהירות 33⅓ RPM. המעבר הזה לא היה רק טכנולוגי, אלא גם אמנותי: במקום לחשוב על כל שיר כיחידה נפרדת, בלו נוט התחילה להתייחס לכל צד של תקליט כמרחב שלם שבו אפשר לבנות זרימה, דרמה והקשר בין קטעים.
 <br><br>
