--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
       height: 100vh;
       width: 100vw;
     }
+    .separator {
+      height: 4px;
+      background-color: white;
+      margin: 20px 0;
+      border: none;
+    }
     .left {
       width: 33.33%;
       height: 100%;
@@ -128,8 +134,9 @@
   Gene Ramey – bass<br>
   Art Blakey – drums<br>
   <br>
-  Recorded October 9, 1952
+  Recorded October 9, 1952 (WOR Studios, NYC)
 </div>
+<hr class="separator">
       <iframe src="https://www.youtube.com/embed/Wn3VIgRJT2w?si=__zyrZozrtycpe24" allowfullscreen></iframe>
 <div class="text-caption">
   Ecaroh (Horace Silver)<br>Horace Silver Trio & Art Blakey–Sabu<br>
@@ -138,8 +145,9 @@
   Curley Russell – bass<br>
   Art Blakey – drums<br>
   <br>
-  Recorded October 20, 1952
+  Recorded October 20, 1952 (WOR Studios, NYC)
 </div>
+<hr class="separator">
       <iframe src="https://www.youtube.com/embed/tXwyQ_8sosw?si=UuzODXgZALvzfygN" allowfullscreen></iframe>
 <div class="text-caption">
   Split Kick (Horace Silver)<br>Art Blakey Quintet — A Night at Birdland, Vols. 1 & 2<br>
@@ -152,10 +160,11 @@ Art Blakey – drums<br>
   <br>
   Recorded February 21, 1954
 </div>
+<hr class="separator">
       <audio controls>
         <source src="05. split kick.mp3" type="audio/mpeg">
       </audio>
-      
+      <hr class="separator">
       <iframe src="https://www.youtube.com/embed/aOMX3Q0P400?si=jNoqlYESqVmI8t7g" allowfullscreen></iframe>
 <div class="text-caption">
   The Preacher (Horace Silver)<br>Horace Silver And The Jazz Messengers<br>
@@ -166,8 +175,9 @@ Hank Mobley – tenor saxophone<br>
 Doug Watkins – bass<br>
 Art Blakey – drums<br>
   <br>
-  Recorded February 6, 1955
+  Recorded February 6, 1955 (Hackensack, New Jersey)
 </div>
+<hr class="separator">
 
     <iframe src="https://www.youtube.com/embed/crA0Pl2A5v0?si=WWlYBKP8TZeWynq6" allowfullscreen></iframe>
 <div class="text-caption">
@@ -177,9 +187,9 @@ Bud Powell – piano<br>
 Curley Russell – bass<br>
 Max Roach – drums<br>
   <br>
-  Recorded May 1, 1951
+  Recorded May 1, 1951 (WOR Studios, NYC)
 </div>
-
+<hr class="separator">
     
     <iframe src="https://www.youtube.com/embed/ANUZ3vF94pE?si=B-srEISoU3oyIg5Q" allowfullscreen></iframe>
 <div class="text-caption">
@@ -191,6 +201,7 @@ Max Roach – drums<br>
   <br>
   Recorded August 1, 1955 (Hackensack, New Jersey)
 </div>
+<hr class="separator">
 
     <iframe src="https://www.youtube.com/embed/KCYCad_Y53U?si=nicb9COINLzq4013" allowfullscreen></iframe>
 <div class="text-caption">
@@ -207,6 +218,7 @@ Aaron Bell – bass<br>
   <br>
   Recorded June 6 and 7, 1956 (Fine Sound Studios, NYC)
 </div>
+<hr class="separator">
 
     <iframe src="https://www.youtube.com/embed/t8jFGFwOm7k?si=_ieIyryk7XnUZaTr" allowfullscreen></iframe>
 <div class="text-caption">
