--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HARDBOP</title>
+  <title>1950</title>
   <link href="https://fonts.googleapis.com/css2?family=David+Libre:wght@700&display=swap" rel="stylesheet">
   <style>
     html, body {
@@ -35,8 +35,8 @@
       box-sizing: border-box;
     }
     .divider {
-      width: 5px;
-      background-color: white;
+      width: 0px;
+      background-color: transparent;
     }
     .right {
       width: 66.66%;
