--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     }
     .divider {
       width: 0px;
-      background-color: transparent;
+      background-color: white;
     }
     .right {
       width: 66.66%;
