--- a/index.html
+++ b/index.html
@@ -139,6 +139,47 @@
       width: auto;
       object-fit: contain;
     }
+
+
+
+  /* === MOBILE STYLES === */
+  @media (max-width: 768px) {
+    .container {
+      flex-direction: column;
+    }
+
+    .left, .right {
+      width: 100%;
+      height: auto;
+    }
+
+    .divider {
+      display: none;
+    }
+
+    .right {
+      font-size: 1.6rem;
+      padding: 12px;
+    }
+
+    .left {
+      font-size: 1.3rem;
+      padding: 12px;
+    }
+
+    .image-row {
+      flex-direction: column;
+    }
+
+    .image-half {
+      width: 100%;
+    }
+  /* === MOBILE STYLES === */
+
+
+
+
+
   </style>
 </head>
 <body>
