--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
 
 
 
-  /* === MOBILE STYLES === */
 
+/* === MOBILE STYLES === */
 @media (max-width: 768px) {
   .container {
     flex-direction: column;
@@ -156,7 +156,10 @@
   }
 
   .divider {
-    display: none;
+    display: block;
+    width: 100%;
+    height: 4px;
+    background-color: white;
   }
 
   .left {
@@ -171,20 +174,13 @@
     line-height: 1.5;
   }
 
-  .image-row {
-    flex-direction: column;
-  }
-
-  .image-half {
-    width: 100%;
-  }
-
   .text-block,
   .text-caption {
     font-size: 1.3rem;
     line-height: 1.5;
   }
 }
+
   /* === MOBILE STYLES === */
 
 
