--- a/index.html
+++ b/index.html
@@ -301,6 +301,16 @@ Louis Hayes - drums<br>
     <div class="divider"></div>
 <div class="divider"></div>
 <div class="right">
+
+
+   <div class="image-block">
+        <img src="horace.jpg">
+      </div>
+   <div class="text-block">
+הוראס סילבר היה אחד מהפסנתרנים והמלחינים המרכזיים שהובילו את המעבר מביבופ להארד בופ בשנות ה־50 וה־60. בניגוד לגישת הביבופ ההרמונית והווירטואוזית של דור קודם, סילבר הדגיש גרוב, תבניות ברורות ומלודיות פשוטות יחסית, שלעיתים קרובות שאבו השראה מגוספל, בלוז ומוזיקה דרום־אמריקאית. הוא כתב יצירות עם מבנים יותר מורכבים, עם דגש על מקצבים שהולכים יחד עם סווינג, ושימוש חכם ברפטיציה. המוזיקה שלו לא רק נתנה מקום לאלתור, אלא גם בנתה מבנים יציבים ומזוהים, כמעט כמו שירי פופ.
+</div>
+
+
       <div class="image-row">
         <div class="image-half"><img src="1.jpg" alt="1"></div>
         <div class="image-half"><img src="2.jpg" alt="2"></div>
@@ -360,6 +370,11 @@ Louis Hayes - drums<br>
 <br><br>
 המעבר ל-LP איפשר להקליט קטעים ארוכים יותר – עד 20 דקות בכל צד – מה שפתח את הדלת לג'אם סשנים מוקלטים, סולואים ארוכים, ולתכנון של אלבום כיצירה שלמה. אלפרד ליון, מייסד בלו נוט, היה ידוע בגישה שלו לתת לנגנים מרחב, זמן, וחזרות באולפן – בניגוד לסטנדרט של התעשייה דאז. כך התחילה התקופה שבה אלבום לא היה רק אוסף של שירים, אלא יצירה קוהרנטית – גם מבחינה מוזיקלית, גם סגנונית, וגם גרפית, בזכות העיצוב של ריד מיילס והצילום של פרנסיס וולף.
     </div>  
+
+  <div class="image-row">
+        <div class="image-half"><img src="splitkick.jpg"></div>
+        <div class="image-half"><img src="quicksilver.jpg"></div>
+      </div>
 
     </div>
   </div>
