--- a/index.html
+++ b/index.html
@@ -311,6 +311,12 @@ Louis Hayes - drums<br>
 </div>
 
 
+      <div class="image-block">
+        <img src="7.jpg" alt="7">
+      </div>
+ <div class="text-block">ההתחלה של ה-Jazz Messengers הייתה שיתוף פעולה בין הפסנתרן הוראס סילבר והמתופף ארט בלייקי, שהחלה כבר ב־1954. בהתחלה פעלו בהרכב טריו (עם קרלי ראסל על הבס), ובהמשך הקימו קווינטט שכלל את האנק מובלי (טנור סקסופון), קני דורהאם (חצוצרה) ודאג ווטקינס (בס). הקלטות מוקדמות של ההרכב יצאו תחילה תחת השם "Horace Silver Quintet" בשני תקליטי 10 אינץ' של Blue Note, ורק אחר כך אוחדו ל־LP של 12 אינץ' בשם Horace Silver and the Jazz Messengers. ב־1955, הם הקליטו לראשונה תחת השם "Jazz Messengers" באופן רשמי, בהופעה חיה ב־Café Bohemia.</div>
+
+
       <div class="image-row">
         <div class="image-half"><img src="1.jpg" alt="1"></div>
         <div class="image-half"><img src="2.jpg" alt="2"></div>
@@ -328,10 +334,7 @@ Louis Hayes - drums<br>
 <br><br>
 המילה "אלבום" לתיאור אוסף שירים מגיעה דווקא מתקופת תקליטי ה-78. אז, כל שיר היה על תקליט נפרד, והיו מוכרים אותם בצרור – כמו אלבום תמונות – שבו כל "דף" היה מעטפה עם תקליט בודד. כך נולד הביטוי "אלבום מוזיקה": אוסף של תקליטים שכל אחד מהם כולל שיר אחד, שמסודרים יחד כמו ספר.
       </div>
-      <div class="image-block">
-        <img src="7.jpg" alt="7">
-      </div>
- <div class="text-block">הוראס סילבר וארט בלייקי, שנות החמישים</div>
+
     <div class="image-row">
         <div class="image-half"><img src="rudy1.jpg"></div>
         <div class="image-half"><img src="rudy2.jpg"></div>
