--- a/index.html
+++ b/index.html
@@ -145,6 +145,11 @@
 
 /* === MOBILE STYLES === */
 @media (max-width: 768px) {
+  .overlay img {
+    max-height: 90vh;
+    max-width: 90vw;
+    width: auto;
+    height: auto;
   .container {
     flex-direction: column;
   }
