--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>1950's</title>
-  <link href="https://fonts.googleapis.com/css2?family=David+Libre:wght@700&display=swap" rel="stylesheet">
+
+<link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=David+Libre:wght@700&display=swap" onload="this.rel='stylesheet'">
+<noscript>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=David+Libre:wght@700&display=swap">
+</noscript>
+
   <style>
     html, body {
       margin: 0;
