--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       width: 100%;
       height: 100%;
       overflow: hidden;
-      font-family: 'David Libre', serif;
+      font-family: 'David Libre', sans-serif;
     }
 
 /* עיצוב ל-Chrome, Edge, ו-Safari */
@@ -103,6 +103,9 @@
     .image-half img {
       width: 100%;
       height: auto;
+margin: 0;
+  padding: 0;
+  display: block;
     }
     .image-block {
       margin-bottom: 0px;
