--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
       aspect-ratio: 16 / 9;
       margin-bottom: 20px;
       border: none;
+cursor: pointer;
     }
     audio {
       width: 100%;
@@ -106,6 +107,7 @@
 margin: 0;
   padding: 0;
   display: block;
+cursor: pointer;
     }
     .image-block {
       margin-bottom: 0px;
