--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
       height: 100vh;
       width: 100vw;
     }
+.clickable-iframe {
+  cursor: pointer;
+}
     .separator {
       height: 4px;
       background-color: white;
@@ -78,7 +81,6 @@
       aspect-ratio: 16 / 9;
       margin-bottom: 20px;
       border: none;
-cursor: pointer;
     }
     audio {
       width: 100%;
@@ -209,7 +211,9 @@ cursor: pointer;
 <body>
   <div class="container">
     <div class="left">
+<div class="clickable-iframe">
       <iframe src="https://www.youtube.com/embed/XdRNho9OVzs?si=jTwKTE79NEoDvNgB" allowfullscreen></iframe>
+</div>
 <div class="text-caption">
   Safari (Horace Silver)<br>Horace Silver Trio & Art Blakey–Sabu<br>
   <br>
