--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@ cursor: pointer;
 <hr class="separator">
       <iframe src="https://www.youtube.com/embed/Wn3VIgRJT2w?si=__zyrZozrtycpe24" allowfullscreen></iframe>
 <div class="text-caption">
-  Ecaroh (Horace Silver)<br>Horace Silver Trio & Art Blakey–Sabu<br>
+  Ecaroh (Horace Silver)<br><u>Horace Silver Trio & Art Blakey–Sabu</u><br>
   <br>
   Horace Silver – piano<br>
   Curley Russell – bass<br>
