--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ cursor: pointer;
       <iframe src="https://www.youtube.com/embed/XdRNho9OVzs?si=jTwKTE79NEoDvNgB" allowfullscreen></iframe>
 </div>
 <div class="text-caption">
-  Safari (Horace Silver)<br>Horace Silver Trio & Art Blakey–Sabu<br>
+  Safari (Horace Silver)<br>Horace Silver Trio & Art Blakey–Sabu<br>━━━━━━━━━━━━━━━━
   <br>
   Horace Silver – piano<br>
   Gene Ramey – bass<br>
@@ -226,7 +226,7 @@ cursor: pointer;
 <hr class="separator">
       <iframe src="https://www.youtube.com/embed/Wn3VIgRJT2w?si=__zyrZozrtycpe24" allowfullscreen></iframe>
 <div class="text-caption">
-  Ecaroh (Horace Silver)<br><u>Horace Silver Trio & Art Blakey–Sabu</u><br>
+  Ecaroh (Horace Silver)<br>Horace Silver Trio & Art Blakey–Sabu<br>━━━━━━━━━━━━━━━━
   <br>
   Horace Silver – piano<br>
   Curley Russell – bass<br>
@@ -237,7 +237,7 @@ cursor: pointer;
 <hr class="separator">
       <iframe src="https://www.youtube.com/embed/tXwyQ_8sosw?si=UuzODXgZALvzfygN" allowfullscreen></iframe>
 <div class="text-caption">
-  Split Kick (Horace Silver)<br>Art Blakey Quintet — A Night at Birdland, Vols. 1 & 2<br>
+  Split Kick (Horace Silver)<br>Art Blakey Quintet — A Night at Birdland, Vols. 1 & 2<br>━━━━━━━━━━━━━━━━
   <br>
 Clifford Brown – trumpet<br>
 Lou Donaldson – alto saxophone<br>
