--- a/index.html
+++ b/index.html
@@ -193,12 +193,14 @@ cursor: pointer;
     line-height: 1;
   }
 
-  .text-block,
-  .text-caption {
-    font-size: 1.3rem;
-    line-height: 1.5;
+  .text-block {
+    font-size: 1.4rem;
+    line-height: 1.3;
   }
-}
+  .text-caption {
+    font-size: 1rem;
+    line-height: 1.1;
+  }
 
   /* === MOBILE STYLES === */
 
