--- a/index.html
+++ b/index.html
@@ -195,11 +195,11 @@ cursor: pointer;
 
   .text-block {
     font-size: 1.4rem;
-    line-height: 1.3;
+    line-height: 1.35;
   }
   .text-caption {
-    font-size: 1rem;
-    line-height: 1.1;
+    font-size: 1.1rem;
+    line-height: 1.2;
   }
 
   /* === MOBILE STYLES === */
@@ -217,7 +217,7 @@ cursor: pointer;
       <iframe src="https://www.youtube.com/embed/XdRNho9OVzs?si=jTwKTE79NEoDvNgB" allowfullscreen></iframe>
 </div>
 <div class="text-caption">
-  Safari (Horace Silver)<br>Horace Silver Trio & Art Blakey–Sabu<br>━━━
+  Safari (Horace Silver)<br>Horace Silver Trio & Art Blakey–Sabu<br>
   <br>
   Horace Silver – piano<br>
   Gene Ramey – bass<br>
@@ -228,7 +228,7 @@ cursor: pointer;
 <hr class="separator">
       <iframe src="https://www.youtube.com/embed/Wn3VIgRJT2w?si=__zyrZozrtycpe24" allowfullscreen></iframe>
 <div class="text-caption">
-  Ecaroh (Horace Silver)<br>Horace Silver Trio & Art Blakey–Sabu<br>━━━
+  Ecaroh (Horace Silver)<br>Horace Silver Trio & Art Blakey–Sabu<br>
   <br>
   Horace Silver – piano<br>
   Curley Russell – bass<br>
@@ -239,7 +239,7 @@ cursor: pointer;
 <hr class="separator">
       <iframe src="https://www.youtube.com/embed/tXwyQ_8sosw?si=UuzODXgZALvzfygN" allowfullscreen></iframe>
 <div class="text-caption">
-  Split Kick (Horace Silver)<br>Art Blakey Quintet — A Night at Birdland, Vols. 1 & 2<br>━━━
+  Split Kick (Horace Silver)<br>Art Blakey Quintet — A Night at Birdland, Vol. 1 & 2<br>
   <br>
 Clifford Brown – trumpet<br>
 Lou Donaldson – alto saxophone<br>
@@ -250,13 +250,14 @@ Art Blakey – drums<br>
   Recorded February 21, 1954
 </div>
 <hr class="separator">
+<br>
       <audio controls>
         <source src="05. split kick.mp3" type="audio/mpeg">
       </audio>
       <hr class="separator">
       <iframe src="https://www.youtube.com/embed/aOMX3Q0P400?si=jNoqlYESqVmI8t7g" allowfullscreen></iframe>
 <div class="text-caption">
-  The Preacher (Horace Silver)<br>Horace Silver And The Jazz Messengers<br>━━━
+  The Preacher (Horace Silver)<br>Horace Silver And The Jazz Messengers<br>
   <br>
 Horace Silver – piano<br>
 Kenny Dorham – trumpet<br>
@@ -270,7 +271,7 @@ Art Blakey – drums<br>
 
     <iframe src="https://www.youtube.com/embed/crA0Pl2A5v0?si=WWlYBKP8TZeWynq6" allowfullscreen></iframe>
 <div class="text-caption">
-A Night In Tunisia [Alternate Take] (Dizzy Gillespie)<br>The Amazing Bud Powell, Vols. 1 & 2<br>━━━
+A Night In Tunisia [Alternate Take] (Dizzy Gillespie)<br>The Amazing Bud Powell, Vols. 1 & 2<br>
   <br>
 Bud Powell – piano<br>
 Curley Russell – bass<br>
@@ -282,7 +283,7 @@ Max Roach – drums<br>
     
     <iframe src="https://www.youtube.com/embed/ANUZ3vF94pE?si=B-srEISoU3oyIg5Q" allowfullscreen></iframe>
 <div class="text-caption">
-Lady Sings the Blues (Herbie Nichols)<br>Herbie Nichols Trio<br>━━━
+Lady Sings the Blues (Herbie Nichols)<br>Herbie Nichols Trio<br>
   <br>
 Herbie Nichols – piano<br>
 Al McKibbon – bass<br>
@@ -294,7 +295,7 @@ Max Roach – drums<br>
 
     <iframe src="https://www.youtube.com/embed/KCYCad_Y53U?si=nicb9COINLzq4013" allowfullscreen></iframe>
 <div class="text-caption">
-Lady Sings the Blues (Herbie Nichols)<br>Billie Holiday<br>━━━
+Lady Sings the Blues (Herbie Nichols)<br>Billie Holiday<br>
   <br>
 Billie Holiday – vocals<br>
 Paul Quinichette – tenor saxophone<br>
@@ -311,7 +312,7 @@ Aaron Bell – bass<br>
 
     <iframe src="https://www.youtube.com/embed/t8jFGFwOm7k?si=_ieIyryk7XnUZaTr" allowfullscreen></iframe>
 <div class="text-caption">
-Señor Blues (Horace Silver)<br>Live in Paris<br>February 14, 1959<br>━━━
+Señor Blues (Horace Silver)<br>Live in Paris<br>February 14, 1959<br>
   <br>
 Horace Silver - piano<br>
 Blue Mitchell - trumpet<br>
