--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
       text-align: right;
       font-size: 2.4rem;
       line-height: 1.6;
+background-color: darkgrey;
     }
     iframe {
       width: 100%;
