--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       text-align: right;
       font-size: 2.4rem;
       line-height: 1.6;
-background-color: darkgrey;
+background-color: rgb(232,232,232);
     }
     iframe {
       width: 100%;
