--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
 
 .left::-webkit-scrollbar-track,
 .right::-webkit-scrollbar-track {
-  background: black; /* צבע הרקע של הגלילה */
+  background: rgb(12,13,13); /* צבע הרקע של הגלילה */
 }
 
 .left::-webkit-scrollbar-thumb,
 .right::-webkit-scrollbar-thumb {
-  background-color: white; /* צבע ה"ידית" */
+  background-color: rgb(27,30,30); /* צבע ה"ידית" */
   border-radius: 4px;
 }
 
@@ -75,7 +75,7 @@
       text-align: right;
       font-size: 2.4rem;
       line-height: 1.6;
-background-color: rgb(9,10,10);
+background-color: rgb(12,13,13);
     }
     iframe {
       width: 100%;
