--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 .left::-webkit-scrollbar-thumb,
 .right::-webkit-scrollbar-thumb {
-  background-color: rgb(81,2,217); /* צבע ה"ידית" */
+  background-color: rgb(150,150,150); /* צבע ה"ידית" */
   border-radius: 4px;
 }
 
@@ -48,7 +48,7 @@
 }
     .separator {
       height: 4px;
-      background-color: white;
+      background-color: rgb(81, 2, 217);
       margin: 20px 0;
       border: none;
     }
